添加手动触发 gc 等内容